# Mosp

./: .gitignore  CMakeLists.txt  Coordinate.cpp  Coordinate.h  Living.cpp  Living.h  Map.cpp  Map.h  Move.cpp  Move.h  Object.cpp  Object.h  Pathfinder.cpp  Pathfinder.h  README.md  Tile.cpp  Tile.h  attack.cpp  attack.h  attackvalue.cpp  attackvalue.h  attributs.cpp  attributs.h  calculs.txt  damage.cpp  damage.h  fight.cpp  fighter.h  holdableobject.cpp  holdableobject.h  main.cpp  mainwindow.h  mapscene.cpp  mapscene.h  mapwidget.cpp  mosp.pro  mosp.pro.user.orig  objectdrop.h  player.cpp  player.h  (+6 more)
Client/: index.html
Client Simple/: index.html
Client Simple/js/: connection.js  game.js
ClientOld/: index.html
ClientOld/js/: authenticate.js
Server/: ClientHandler.cpp  ClientHandler.h  ConnectionHandler.cpp  ConnectionHandler.h  Fight.cpp  Fight.h  Living.cpp  Map.cpp  Map.h  MapScene.cpp  MapWidget.cpp  MapWidget.h  Move.h  Object.cpp  Pathfinder.cpp  Pathfinder.h  Range.cpp  Range.h  ShootableRange.cpp  ShootableRange.h  Tile.h  attackrange.cpp  attackvalue.h  attributs.cpp  attributs.h  bag.h  effect.cpp  fight.h  fighter.cpp  main.cpp  mainwindow.h  mapscene.cpp  mapscene.h  mapwidget.cpp  mapwidget.h  monster.h  mosp.pro  nonplayercharacter.h  player.cpp  player.h  (+7 more)
Server/core/attack/: Attack.cpp  Attack.h  AttackRange.cpp  AttackRange.h  AttackValue.cpp  AttackValue.h  Damage.cpp  Damage.h  Effect.cpp  Effect.h  attack.h  attackrange.h  attackvalue.cpp  (+2 more)
UML/: Classes UML.dia  DB.dia  DB.dia.autosave  server organisation.dia
map/: test.map  test.map~
(+44 files in other folders)
